# rag_lite

./: .env  .gitignore  LICENSE  README.md  chromadb_viewer.py  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  config.py
app/blueprints/: __init__.py  auth.py  document.py  knowledgebase.py  settings.py  utils.py
app/models/: __init__.py  document.py  knowledgebase.py  user.py
app/services/: base_service.py  document_service.py  knowledgebase_service.py  parser_service.py  settings_service.py  vector_service.py
app/services/vectordb/: __init__.py  base.py  chroma.py  factory.py  milvus.py
app/templates/: base.html  document_chunks.html  home.html  kb_list.html  settings.html
app/utils/: auth.py  db.py  document_loader.py  embedding_factory.py  logger.py  models_config.py  text_splitter.py
data/mysql8/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
data/mysql8/#innodb_redo/: #ib_redo10  #ib_redo9
data/mysql8/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
data/mysql8/mysql/: general_log_213.sdi  slow_log_214.sdi
data/mysql8/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  (+101 more)
(+4 files in other folders)
