[project]
name = "rag-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-huggingface>=1.2.0",
    "langchain-milvus>=0.3.2",
    "langchain-openai>=1.1.6",
    "minio>=7.2.20",
    "onnxruntime==1.19.2",
    "pymysql>=1.1.2",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
    "sync>=1.0.0",
    "torch==2.2.2",
]
